# dict2

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: dict.cc  dict.h  download.cc  parse.cc  save.cc
